fix scroll jumping on search

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,7 @@
 body {
   background-color:#f8f9fa;
 }
+
+.table-container {
+  min-height: 1000px;
+}
